--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ ul.custom-list li::before {
   transition: opacity 0.3s ease;
 }
 
-.design-card img:hover{
+.design-card img:hover {
   border: 3px solid #f03c2e;
   box-shadow: #f03b2e84 0px 3px 8px;
   cursor: pointer;
@@ -600,7 +600,7 @@ canvas#pdfCanvas {
 .prj-cards:hover {
   transform: rotate(0deg) scale(1.1);
   box-shadow: 0 10px 20px #f03b2e54;
-  border:3px solid #f03c2e
+  border: 3px solid #f03c2e;
 }
 
 .card__content {
@@ -804,6 +804,13 @@ canvas#pdfCanvas {
   #projects,
   #contact {
     padding: 8% 5% 0;
+  }
+
+  #prevPage {
+    left: 3%;
+  }
+  #nextPage {
+    right: 3%;
   }
 
   /* iframe */
