--- a/style.css
+++ b/style.css
@@ -813,6 +813,19 @@ canvas#pdfCanvas {
     right: 3%;
   }
 
+  ul.custom-list {
+    padding-left: 1em; /* space for the bullet */
+  }
+
+  ul.custom-list li {
+    padding-left: 5%;
+  }
+  ul.custom-list li::before {
+  top: 0.2em;
+  width: 7px;
+  height: 7px;
+}
+
   /* iframe */
   .certificates-container {
     height: 70%;
