--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ header nav ul li:hover a {
   border-radius: 50%;
   overflow: hidden;
   z-index: 1;
-  padding: 4px;
 }
 
 .hero-img-container::before {
@@ -165,8 +164,9 @@ header nav ul li:hover a {
 }
 
 #hero-img {
-  width: 100%;
-  height: 100%;
+  width: 370px;
+  height: 370px;
+  padding: 4px;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -448,8 +448,9 @@ ul.custom-list li::before {
 }
 
 .design-card img:not(.view-icon) {
-  width: 100%;
+  width: 200px;
   height: auto;
+  object-fit: cover;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 8px;
   border-radius: 4px;
   transition: all 0.3s ease;
@@ -592,8 +593,8 @@ canvas#pdfCanvas {
   box-shadow: rgba(0, 0, 0, 0.6) 0px 3px 8px;
 }
 .prj-cards img {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
   border-radius: 10px;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
@@ -603,6 +604,7 @@ canvas#pdfCanvas {
   transform: rotate(0deg) scale(1.1);
   box-shadow: 0 10px 20px #f03b2e54;
   border: 3px solid #f03c2e;
+  object-fit: cover;
 }
 
 .card__content {
@@ -823,10 +825,10 @@ canvas#pdfCanvas {
     padding-left: 5%;
   }
   ul.custom-list li::before {
-  top: 0.2em;
-  width: 7px;
-  height: 7px;
-}
+    top: 0.2em;
+    width: 7px;
+    height: 7px;
+  }
 
   /* iframe */
   .certificates-container {
