--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ ul.custom-list li::before {
   border: 1px solid #000;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 4px;
 }
+
 #closeCertBtn {
   position: absolute;
   top: 20px;
@@ -410,7 +411,8 @@ ul.custom-list li::before {
   border-radius: 10px;
   transition: outline 0.3s ease;
 }
-.cards:hover {
+.cards:hover,
+.workCertContainer img:hover {
   outline: 2px solid #f03c2e;
   box-shadow: #f03b2e76 0px 3px 8px;
 }
@@ -469,7 +471,7 @@ ul.custom-list li::before {
   width: 200px;
   height: auto;
   object-fit: cover;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 3px 8px;
   border-radius: 4px;
   transition: all 0.3s ease;
 }
@@ -634,7 +636,7 @@ canvas#pdfCanvas {
   height: 100%;
   padding: 60px 20px 20px;
   box-sizing: border-box;
-  background-color: #000000b2;
+  background-color: #000000e3;
   opacity: 0;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
   display: flex;
@@ -658,7 +660,7 @@ canvas#pdfCanvas {
 
 .card__content p {
   color: #fff;
-  font-size: 15px;
+  font-size: 14px;
   margin-bottom: 10px;
 }
 
